# handmade-hero

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_commands.json  old_compile_commands.json  working_window.cpp  xb.sh
src/: sdl_handmade.cpp  sld_handmade.cpp
